# servicetitan-mcp

./: .gitignore  .mcpbignore  CLAUDE.md  Dockerfile  README.md  claude_desktop_config_example.json  manifest.json  pyproject.toml  railway.toml
docs/superpowers/plans/: 2026-06-25-run-report-chunked.md
docs/superpowers/specs/: 2026-06-25-run-report-chunked-design.md
plans/: multi-tenant.md
servicetitan_mcp/: __init__.py  auth.py  client.py  config.py  report_export.py  server.py
tests/: test_client_retry.py  test_coerce_input.py  test_config_slots.py  test_get_tools.py  test_pagination.py  test_report_to_file.py  test_resources.py  test_slice4_tools.py  test_subresource_tools.py  test_token_bucket.py
