[project]
name = "servicetitan-mcp"
version = "1.0.0"
description = "MCP server for ServiceTitan API — connects Claude to jobs, customers, invoices, estimates, dispatch, and more"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx[socks]>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
servicetitan-mcp = "servicetitan_mcp.server:main"
